ub-desk-230-requirements.txt
python3 app.py
app.py HERE!!!
python3 app.py
  File "app.py", line 1
    <<<<<<< HEAD
    ^
SyntaxError: invalid syntax
